(Another) dynamic import() blocks
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox-esr102 | --- | unaffected |
| firefox104 | --- | unaffected |
| firefox105 | --- | fixed |
| firefox106 | --- | fixed |
People
(Reporter: mozbz, Assigned: jonco)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
|
773 bytes,
application/zip
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
This is very similar to bug1787926, which has been fixed and uplifted to Beta, but I've found another pattern of imports that also fails even after that fix landed.
I've included a new demo site, mimicing the test for bug1787926.
Once again the demo site works in Firefox 104 and Chrome but fails in Beta 105 and Nightly 106. The mozregression range again points to bug1779421.
Steps to Reproduce:
Serve the included website and open /index.html.
Expected Results:
The site displays a status message, which should progress to a "Success!" message.
Actual Results:
The site gets stuck "Waiting...".
Updated•3 years ago
|
Comment 1•3 years ago
|
||
Setting Regressed by field after analyzing regression range found by mozregression in comment #0.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 2•3 years ago
|
||
Thanks for another great bug report!
| Assignee | ||
Comment 3•3 years ago
|
||
This is indeed very similar to bug 1787926.
As per the current spec we don't resolve the top level capability of async
modules in ModuleEvaluate, even if evaluation has finished successfully. This
is due to the following spec change:
I think this should revert to the original behaviour which resolves the
capability when the module has finished evaluating, even for async modules.
Updated•3 years ago
|
Comment 5•3 years ago
|
||
| bugherder | ||
Reporter confirming the Expected Results are now seen in Nightly 20220909212835 (rev/b84775bfccf2243f664b1c15ca987a05c54a95e2). Thank you!
- Status message progresses to "Success!"
Comment 7•3 years ago
|
||
The patch landed in nightly and beta is affected.
:jonco, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox105towontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 8•3 years ago
|
||
Comment on attachment 9293516 [details]
Bug 1789412 - Resolve top-level capability of all Evaluated modules in ModuleEvaluate r?yulia
Beta/Release Uplift Approval Request
- User impact if declined: Web compat issue involving modules not loading in some circumstances.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This is a very simple change that is covered by tests and has been verified on nightly.
- String changes made/needed: None
- Is Android affected?: Yes
Comment 9•3 years ago
|
||
Comment on attachment 9293516 [details]
Bug 1789412 - Resolve top-level capability of all Evaluated modules in ModuleEvaluate r?yulia
Approved for 105.0rc1.
Comment 10•3 years ago
|
||
| bugherder uplift | ||
Description
•