Bug 1789412 - Resolve top-level capability of all Evaluated modules in ModuleEvaluate. r=yulia, a=RyanVM

This is indeed very similar to bug 1787926.

As per the current spec we don't resolve the top level capability of async
modules in ModuleEvaluate, even if evaluation has finished successfully. This
is due to the following spec change:

https://github.com/tc39/proposal-top-level-await/commit/c2375dbd6ecb0d5e9a415f6a812fc0974a2935b7#diff-181371b08d71216599b0acccbaabd03c306da6de142ea6275c2135810999805aL546-R547

I think this should revert to the original behaviour which resolves the
capability when the module has finished evaluating, even for async modules.

Differential Revision: https://phabricator.services.mozilla.com/D156704